# foam

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
.zed/: settings.json
examples/: hello.rs  simple.rs
foam/: Cargo.toml
foam/examples/: hello.rs
foam/src/: lib.rs  math.rs  print.rs
foam_common/: Cargo.toml
foam_common/src/: lib.rs  shapes.rs
foam_gl/: Cargo.toml
foam_gl/src/: lib.rs
foam_proc_macro/: Cargo.toml  README.md
foam_proc_macro/src/: lib.rs
foam_psp/: Cargo.toml  README.md
foam_psp/src/: lib.rs
foam_vk/: Cargo.toml
foam_vk/src/: lib.rs
npins/: sources.json
ps2sdk/: Cargo.toml  ps2.json
ps2sdk-ee-sys/: Cargo.toml  build.rs  wrapper.h
ps2sdk-ee-sys/src/: lib.rs
ps2sdk/examples/: hello.rs
ps2sdk/src/: lib.rs
src/: lib.rs  math.rs
