[workspace]
members = ["foam", "foam_common","foam_proc_macro", "foam_psp", "foam_vk"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
foam_proc_macro.path = "foam_proc_macro"
foam_common.path = "foam_common"
foam_psp.path = "foam_psp"
foam_vk.path = "foam_vk"
proc-macro2 = "1.0.2"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["visit-mut", "full"] }
psp = "0.3.12"
winit = { version = "0.29", features = ["rwh_06"] }
kazan = { version = "0.1.0", default-features = false, features = ["linked", "debug", "std", "window"] }

pretty_env_logger = "0.5"
this_error = "1"
cgmath = "0.18"
tobj = { version = "3", features = ["log"] }
png = "0.17"
