[workspace]
members = [
  "foam",
  "foam_common",
  "foam_proc_macro",
  "foam_psp"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
foam_proc_macro.path = "foam_proc_macro"
foam_common.path = "foam_common"
foam_psp.path = "foam_psp"
foam_gl.path = "foam_gl"
proc-macro2 = "1.0.2"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["visit-mut", "full"] }
psp = "0.3.12"
winit = { version = "0.30", features = ["rwh_06"] }

gl = "0.14.0"
glutin = "0.32.3"
cgmath = "0.18"
glutin-winit = "0.5.0"
tobj = { version = "3", features = ["log"] }
png = "0.17"
