[package]
name = "foam"
version = "0.1.0"
edition = "2024"

[dependencies]
foam_proc_macro.workspace = true
foam_common.workspace = true

[target.'cfg(target_os = "psp")'.dependencies]
psp.workspace = true
foam_psp.workspace = true

[target.'cfg(any(windows,unix))'.dependencies]
winit.workspace = true
foam_gl = {
  workspace = true,
  optional = true,
}
gl = {
  workspace = true,
  optional = true,
}
glutin = {
  workspace = true,
  optional = true,
}
glutin-winit = {
  workspace = true,
  optional = true,
}

[target.'cfg(target_os = "psp")'.features]
default = ["gl"]

[features]
gl = [
  "dep:foam_gl",
  "dep:gl",
  "dep:glutin",
  "dep:glutin-winit"
]
